--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rentempi",
+  "name": "Rentempinew",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -17,11 +17,13 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "axios": "^0.19.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "formik": "^2.1.4",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-dash": "^0.0.11",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-modal": "^11.5.6",
@@ -29,7 +31,9 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-svg": "^12.1.0",
-    "tailwind-rn": "^1.1.1"
+    "react-native-vector-icons": "^7.0.0",
+    "tailwind-rn": "^1.1.1",
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
